# text-classification-baseline

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  baseline.py  codecov.yml  config.yaml  hyperparams.py  requirements.txt  setup.cfg
.github/workflows/: codecov.yml  linter.yml  tests.yml
data/: README.md  fetch_20newsgroups.py  load_20newsgroups.py
models/: README.md
src/text-clf/: main.py
src/text_clf/: __init__.py  __main__.py  logger.py  main.py  save.py  token_frequency.py  train.py  utils.py
tests/: hyperparams_for_tests.py  test_lemmatizer.py  test_pipeline.py  test_pr_roc_curve.py  test_token_frequency.py
tests/config/: config.yaml  config_grid_search.yaml  config_lemmatizer_error.yaml  config_pymorphy2.yaml  config_russian.yaml  config_russian_pymorphy2.yaml
tests/config/token_frequency/: config.yaml  config_pymorphy2.yaml
tests/data/: README.md
tests/hyperparams/: hyperparams_for_tests.py
text_clf/: __init__.py  __main__.py  config.py  data.py  lemmatizer.py  pr_roc_curve.py  save.py  token_frequency.py  train.py  utils.py
