[metadata]
name = text-classification-baseline
version = 0.1.0
author = Dani El-Ayyass
author_email = dayyass@yandex.ru
description = TF-IDF + LogReg baseline for text classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dayyass/text-classification-baseline
project_urls =
    Bug Tracker = https://github.com/dayyass/text-classification-baseline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas >= 1.3.1
    PyYAML >= 5.4.1
    scikit-learn >= 0.24.2

[options.entry_points]
console_scripts =
    text-clf = text_clf.train:main
